# get-lume-app

./: .gitignore  README.md  README.pt-BR.md
.github/workflows/: desktop-release.yml
macos/: Package.swift  build.sh
macos/Lume/: ContentView.swift  LumeApp.swift
macos/Lume/Models/: AppSection.swift
macos/Lume/Resources/: Info.plist
macos/Lume/Services/: AnalyticsService.swift  AppManager.swift  AppleSecurityInfo.swift  DiskScanner.swift  DonationManager.swift  LargeFilesScanner.swift  Localization.swift  MalwareScanner.swift  PermissionsManager.swift  PrivilegedExecutor.swift  SoundManager.swift  SystemMonitor.swift  UpdaterService.swift
macos/Lume/Views/: AppsManagerView.swift  DashboardView.swift  DiskScannerView.swift  DonationPopupView.swift  LargeFilesView.swift  MalwareView.swift  MemoryCleanerView.swift  MenuBarView.swift  PerformanceView.swift  SettingsView.swift  SystemMonitorView.swift
macos/Lume/Views/Components/: CircularGauge.swift  (+2 more)
macos/installer/: conclusion.html  eula.html  welcome.html
windows-linux/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
windows-linux/src/: app.html
windows-linux/src-tauri/: Cargo.toml  tauri.conf.json
windows-linux/src-tauri/capabilities/: default.json
windows-linux/src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
windows-linux/src-tauri/src/commands/: apps.rs  disk.rs  donation.rs  large_files.rs  memory.rs  mod.rs  performance.rs  protection.rs  settings.rs  system.rs  updater.rs
windows-linux/src-tauri/src/platform/: linux.rs  mod.rs  windows.rs
windows-linux/src-tauri/src/services/: app_manager.rs  disk_scanner.rs  donation.rs  large_files.rs  memory_cleaner.rs  mod.rs  performance.rs  protection.rs  settings.rs  system_monitor.rs  updater.rs
windows-linux/src/lib/: sections.ts
windows-linux/src/routes/: +layout.svelte  +page.svelte
(+28 files in other folders)
