[package]
name = "lume"
version = "1.0.0"
description = "Lume — cross-platform cleanup utility"
authors = ["Hasen Borges <hasen.borges@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "lume_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "fs"] }
async-trait = "0.1"
parking_lot = "0.12"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sysinfo = "0.32"
trash = "5"
walkdir = "2"
dirs = "5"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = { version = "1", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
freedesktop-desktop-entry = "0.7"
nix = { version = "0.29", features = ["user"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
] }
winreg = "0.55"
runas = "1.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
